primer intento de aplicación terminada
